--- a/projects/jarvis-theme/src/components/list/list.component.scss
+++ b/projects/jarvis-theme/src/components/list/list.component.scss
@@ -1,9 +1,9 @@
 li{
-    border-bottom-color: #02ffff;
+    border-bottom-color: rgb(2, 255, 255, .75);
     border-bottom-style: solid;
     padding-left: 5px;
 }
 
-.hover :hover{
+.hover:hover{
     background-color: rgba(2, 255, 255, .1);
 }
