--- a/projects/jarvis-theme/src/styles/main.scss
+++ b/projects/jarvis-theme/src/styles/main.scss
@@ -1,21 +1,1 @@
-@import 'node_modules/primeflex/primeflex.css';
 
-$primary-color: #02ffff;
-$secondary-color: #01bbbb;
-
-.primary-text{
-    color: $primary-color;
-}
-
-.transparant-background{
-    background-color: transparent;
-}
-
-.border{
-    border-left-style: solid;
-    border-left-color: $primary-color;
-}
-
-ul{
-    padding: 0;
-}
